redwind/static/css/style.css
body {
    max-width: 800px;
    margin: 1em auto;
    line-height: 1.4em;
    font-family: "Nimbus Sans L", Helvetica, sans-serif;
}

a {
    color: #07d;
    text-decoration: none;
}

a:hover {
    color: #05b;
    text-decoration: underline;
}

p {
    margin: 0;
}

p + p {
    margin-top: 0.8em;
}

pre {
    overflow-x: auto;
}

main {
    margin-top: 50px;
}

article + article {
    margin-top: 150px;
}

article.note-like .primary-content {
    font-size: 1.5em;
    line-height: 1.4em;
}

article .tags {
    margin: 0.6em; 0.2em;
}

article a.p-category {
    color: #999;
    background-color: #eee;
    padding: 0px 5px;
    display: inline-block;
    text-decoration: none;
}

.post-metadata {
    color: #999;
    font-size: 0.9em;
    margin-top: 0.5em;
}
.post-metadata a {
    color: #999;
}

.post-metadata span + span {
  margin-left: 1em;
}

.microcard img {
    max-height: 1.2em;
    width: auto;
}

blockquote {
    margin-left: 0;
    padding-left: 1em;
    border-left: 2px solid #999;
}

.admin-post-controls, .admin-post-controls-arrow {
    float: right;
}

/* ----------- Navgation ----------- */

.site-title {
    font-weight: bold;
}

nav span {
    display: inline-block;
    margin: 0px 0.5em 0.2em 0.5em;
}

nav a {
    display: inline-block;
    color: #999;
    margin: 0px 0.5em 0.2em 0.5em;
}

nav {
    border-bottom: 2px solid #ddd;
}

.page-arrows {
    margin: 10px;
}
.page-arrows .page-right {
    float: right;
}
.page-arrows .page-left {
    float: left;
}


/* ----------- Contexts ----------- */

.p-in-reply-to.h-cite .e-content {
    border-left: 1px solid #ddd;
    padding: 0.5em;
    margin-bottom: 0.5em;
}

article.share .p-author .u-photo {
    float: left;
    margin-top: 0.5em;
    margin-right: 0.7em;
    border-radius: 4px;
    max-width: 64px;
    height: auto;
}

article.share .repost-body {
    margin-left: calc(64px + 0.7em);
}

article.share .repost-entry + .repost-entry {
    margin-top: 1em;
}

/* ----------- Mentions ----------- */

.mentions {
    margin: 50px 0px;
}

.send_webmention {
    margin-top: 50px;
}

.p-comment + .p-comment {
    margin-top: 1rem;
}

.mention-metadata {
    color: #999;
}

.mention-metadata a {
    color: #999;
}

/* ----------- Footer ----------- */

footer .site-info {
    text-align: center;
    color: #999;
}

footer .site-info a {
    text-align: center;
    color: #666;
}

footer .p-author.h-card img {
    max-width: 64px;
    border-radius: 4px;
    display:inline;
    float: left;
    margin-right: 0.5em;
}

footer {
    margin-top: 150px;
}

/* ----------- Forms ----------- */

.new-post-bar {
    text-align: center;
    margin: 20px auto;
    font-size: 10pt;
}

.new-post-bar ul {
    list-style-type: none;
}

.new-post-bar ul li {
    text-align: center;
    vertical-align: center;
    display: inline;
    padding: 1em;
}

.new-post-bar i {
    font-size: 24pt;
    display: block;
}

.new-post-bar a {
    color: #333;
    display: inline-block;
    width: 40px;
    text-decoration: none;
}

label {
    display: block;
}

#edit_form textarea, #edit_form input[type="text"] {
    width: 100%;
}

.top_tags {
    margin: 0px 0px 20px;
}

a.top_tag {
    border: 1px solid #aaa;
    color: #333;
    background-color: #eee;
    padding: 3px;
    margin: 0px 0px 5px;
    display: inline-block;
    text-decoration: none;
}

a.top_tag:hover {
    background-color: #ddf;
}

